src/test/deca/context/valid/with_object/protected_declaration2.deca
class A {
    protected float f = 0;
    protected void method(){
        ;
    }
    protected int method2(){
        return 1;
    }
}