src/test/deca/context/invalid/with-object/type_before_protected.deca
class A{
    int protected x;
}